--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,20 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # IDE
 .editorconfig
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
 .pnp.cjs
 
-# testing
+# Testing
 /coverage
 
-# production
+# Production
 /build
+/gh-pages
 
-# misc
+# Misc
 .DS_Store
 .env.local
 .env.development.local
