feat: fix footer and routing to individual pleonasm page
- Update github page domain
- Rename some components for more readability

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Pleonasmos",
+  "name": "Dicionário de Pleonasmos",
   "icons": [
     {
       "src": "favicon.ico",
