--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://iikaro.github.io/react-app",
+  "homepage": "https://iikaro.github.io/dicionario-de-pleonasmos",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
